--- a/GE.WebAdmin/Views/Banners/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Banners/_GridView.cshtml
@@ -9,9 +9,7 @@
         {
             Columns = new SxExtantions.SxGridViewColumn<SxVMBanner>[]{
                 new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Id", Caption="Идентификатор"},
-                new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Url", Caption="Адрес перехода", Template=(b)=> {
-                    return string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a target=\"_blank\" href=\"{0}\">{0}</a>", b.Url);
-                } },
+                new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Url", Caption="Адрес перехода"},
                 new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Title", Caption="Заголовок"},
                 new SxExtantions.SxGridViewColumn<SxVMBanner>{FieldName="Place", Caption="Позиция", Template=(b)=> {
                     return b.Place==SX.WebCore.SxBanner.BannerPlace.Unknown? null : string.Format("<b class=\"text-warning\">{0}</b>", b.Place);
