--- a/GE.WebAdmin/Views/Redirects/Index.cshtml
+++ b/GE.WebAdmin/Views/Redirects/Index.cshtml
@@ -4,8 +4,10 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<p class="text-info">В силу невозможности отследить все битые ссылки рекомендуется заменять редирект для всех страниц, уже прошедших индексацию</p>
-<br />
+<div class="alert alert-warning">
+    <strong>Внимание!</strong> В силу невозможности отследить все битые ссылки рекомендуется заменять редирект для всех страниц, уже прошедших индексацию
+</div>
+
 <div id="grid-301-redirects">
     @Html.Partial("_gridview", Model)
 </div>
