--- a/GE.WebAdmin/Views/SeoKeywords/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SeoKeywords/_GridView.cshtml
@@ -6,7 +6,7 @@
 
 <br />
 <h3>Ключевые слова<span class="small"> (Максимально рекомендуемое количество фраз - 20)</span></h3>
-@using (Ajax.BeginForm("edit", new { controller = "SeoKeywords", SeoTagsId= seoTagsId }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "seo-kw" }))
+@using (Ajax.BeginForm("edit", new { controller = "SeoKeywords", SeoTagsId = seoTagsId }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "seo-kw" }))
 {
     @Html.AntiForgeryToken()
     <label for="Value">Новое ключевое слово</label>
@@ -24,8 +24,8 @@
                 Columns = new SxExtantions.SxGridViewColumn<SxVMSeoKeyword>[]{
                     new SxExtantions.SxGridViewColumn<SxVMSeoKeyword>{FieldName="Value", Caption="Ключевое слово"}
                 },
-                DataAjaxUrl="/seokeywords?stid="+ seoTagsId,
-                EnableDeleting=true,
-                DeleteRowUrl = x => { return "/seokeywords/delete?Id=" + x.Id+"&SeoTagsId="+ seoTagsId; }
+                DataAjaxUrl = Url.Action("Index", "SeoKeywords", new { stid = seoTagsId }),
+                EnableDeleting = true,
+                DeleteRowUrl = x => { return Url.Action("Delete", "SeoKeywords", new { id = x.Id, SeoTagsId = seoTagsId }); }
             }
     )
