--- a/GE.WebAdmin/Views/SiteSettings/EditSite.cshtml
+++ b/GE.WebAdmin/Views/SiteSettings/EditSite.cshtml
@@ -3,19 +3,31 @@
     ViewBag.Title = "Настройки сайта";
     var message = TempData["EditEmptyGameMessage"];
 }
+
+@section styles{
+    <link href="~/content/dist/css/lightbox.min.css" rel="stylesheet" />
+    <style type="text/css">
+        .grid-pictures tbody > tr > td:last-child {
+            text-align: center;
+            vertical-align: middle;
+        }
+    </style>
+}
+
 <h2>@ViewBag.Title</h2>
 <br />
 @if (message != null)
 {
     <p class="text-success">@message</p>
 }
-<form method="post" action="/sitesettings/editsite" autocomplete="off">
+<form method="post" action="@Url.Action("Editsite","SiteSettings")" autocomplete="off">
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.OldSiteDomain)
     @Html.HiddenFor(x => x.OldLogoPath)
     @Html.HiddenFor(x => x.OldSiteName)
     @Html.HiddenFor(x => x.OldSiteBgPath)
     @Html.HiddenFor(x => x.OldSiteFaveiconPath)
+    @Html.HiddenFor(x => x.OldSiteDesc)
 
     <div class="row">
         <div class="col-sm-6">
@@ -60,13 +72,25 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(x => x.SiteDesc, new { @class = "control-label" })
+        @Html.EditorFor(x => x.SiteDesc, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите описание сайта" } })
+        @Html.ValidationMessageFor(x => x.SiteDesc)
+    </div>
+
+    <div class="form-group">
         <button type="submit" class="btn btn-primary">Сохранить</button>
     </div>
 </form>
 
 @section scripts{
+    <script src="~/bower_components/ckeditor/ckeditor.js"></script>
     <script src="~/content/dist/js/lightbox.min.js"></script>
     <script>
+        if (CKEDITOR.instances['SiteDesc']) {
+            CKEDITOR.remove(CKEDITOR.instances['SiteDesc']);
+        }
+        CKEDITOR.replace('SiteDesc', { height: 300 });
+
         $(function () {
             $('#LogoPath, #SiteBgPath, #SiteFaveiconPath').sx_gvl();
 
