--- a/GE.WebAdmin/Views/Articles/Edit.cshtml
+++ b/GE.WebAdmin/Views/Articles/Edit.cshtml
@@ -96,18 +96,31 @@
             {
                 @Html.HiddenFor(x => x.TitleUrl)
             }
+
             <div class="row">
-                <div class="col-md-3">
-                    @Html.LabelFor(x => x.GameId, new { @class = "control-label" })
-                    @Html.EditorFor(x => x.GameId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.GameId)
+                <div class="col-md-6">
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.GameId, new { @class = "control-label" })
+                        @Html.EditorFor(x => x.GameId, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(x => x.GameId)
+                    </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.GameVersion, new { @class = "control-label" })
+                        @Html.EditorFor(x => x.GameVersion, new { htmlAttributes = new { @class = "form-control", @placeholder = "Версия игры" } })
+                        @Html.ValidationMessageFor(x => x.GameVersion)
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-5">
                     @Html.LabelFor(x => x.CategoryId, new { @class = "control-label" })
                     @Html.EditorFor(x => x.CategoryId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.CategoryId)
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5">
                     @Html.LabelFor(x => x.FrontPictureId, new { @class = "control-label" })
                     @if (Model.FrontPictureId.HasValue)
                     {
