--- a/GE.WebUI/Views/SiteTests/_StepNormal.cshtml
+++ b/GE.WebUI/Views/SiteTests/_StepNormal.cshtml
@@ -14,6 +14,9 @@
         <br />
         <blockquote>
             @Html.Raw(Model.Question.Test.Description)
+            <div class="step__test-info">
+                Просмотров: <span>@Model.Question.Test.ViewsCount</span>
+            </div>
         </blockquote>
 
         <div id="results">
