--- a/GE.WebAdmin/less/test-matrix.less
+++ b/GE.WebAdmin/less/test-matrix.less
@@ -13,9 +13,8 @@
 }
 
 #matrix .matrix__table {
-    overflow: hidden;
-    max-height: 100%;
-    overflow-x: auto;
+    max-height: 680px;
+    overflow: auto;
 }
 
 #matrix .matrix__first-column{
@@ -42,6 +41,7 @@
 
 #matrix .sx-pager{
     margin-top:@def-pad;
+    margin-left:0;
     display:inline-block;
 }
 
