--- a/GE.WebUI/less/site-tests.less
+++ b/GE.WebUI/less/site-tests.less
@@ -162,6 +162,11 @@
     color:#777;
 }
 
+.test-normal-s__desc{
+    font-size:25px;
+    margin-top:@def-pad*2;
+}
+
 //test-results
 .test-result.normal {
     margin-bottom: @def-pad*3;
