--- a/GE.WebAdmin/Views/SiteTestSubjects/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SiteTestSubjects/_GridView.cshtml
@@ -12,10 +12,10 @@
                 new SxExtantions.SxGridViewColumn<SxVMSiteTestSubject>{FieldName="Title", Caption="Заголовок"},
                 new SxExtantions.SxGridViewColumn<SxVMSiteTestSubject>{FieldName="Description", Caption="Описание"},
                 new SxExtantions.SxGridViewColumn<SxVMSiteTestSubject>{FieldName="PictureId", Caption="Картинка", Template=x=> {
-                    return x.Picture==null? null: string.Format("<a data-lightbox=\"roadtrip\" data-title=\"{0}\" data-toggle=\"tooltip\" title=\"Помотреть картинку\" href=\"/pictures/picture/{1}\"><i class=\"fa fa-picture-o\"></i></a>", x.Picture.Caption, x.PictureId);
+                    return x.Picture==null? null: string.Format("<a data-lightbox=\"roadtrip\" data-title=\"{0}\" data-toggle=\"tooltip\" title=\"Помотреть картинку\" href=\"/pictures/picture/{1}\"><i class=\"fa fa-picture-o\"></i></a>", x.Title, x.PictureId);
                 }}
             },
-            DataAjaxUrl = Url.Action("Index", "Sitetestsubjects", new { testId= testId }),
+            DataAjaxUrl = Url.Action("Index", "Sitetestsubjects", new { id=(int?)null, testId= testId }),
             EnableCreating=true,
             CreateRowUrl= Url.Action("Edit", "Sitetestsubjects", new { testId = testId }),
             EnableDeleting =true,
