--- a/GE.WebAdmin/Views/SiteTests/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Edit.cshtml
@@ -91,6 +91,15 @@
                 @Html.HiddenFor(x => x.TitleUrl)
             }
 
+            @if (Model.Type == SxSiteTest.SiteTestType.NormalImage)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(x => x.ShowSubjectDesc, new { @class = "control-label" })
+                    @Html.EditorFor(x => x.ShowSubjectDesc, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(x => x.ShowSubjectDesc)
+                </div>
+            }
+
             <div class="form-group">
                 @Html.LabelFor(x => x.Description, new { @class = "control-label" })
                 @Html.EditorFor(x => x.Description, new { htmlAttributes = new { @class = "form-control" } })
@@ -186,14 +195,15 @@
     <script src="~/content/dist/js/jquery.validate.unobtrusive.min.js"></script>
     <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
     <script src="~/content/dist/js/lightbox.min.js"></script>
+
     <script>
         $(function () {
             if (CKEDITOR.instances['Description'] && CKEDITOR.instances['Rules']) {
                 CKEDITOR.remove(CKEDITOR.instances['Description']);
                 CKEDITOR.remove(CKEDITOR.instances['Rules']);
             }
-            CKEDITOR.replace('Description', { height: 400 });
-            CKEDITOR.replace('Rules', { height: 400 });
+            CKEDITOR.replace('Description', { height: 300 });
+            CKEDITOR.replace('Rules', { height: 300 });
             
             $('input[name="test-file-input"]').focus(function(){
                 $input=$(this);
@@ -280,7 +290,7 @@
                         if (CKEDITOR.instances['subject.Description']) {
                             CKEDITOR.remove(CKEDITOR.instances['subject.Description']);
                         }
-                        CKEDITOR.replace('subject.Description', { height: 400 });
+                        CKEDITOR.replace('subject.Description', { height: 300 });
                         $body.find('#PictureId').sx_gvl();
                         $modal.modal('show');
                     }
@@ -327,7 +337,7 @@
                         if (CKEDITOR.instances['subject.Description']) {
                             CKEDITOR.remove(CKEDITOR.instances['subject.Description']);
                         }
-                        CKEDITOR.replace('subject.Description', { height: 400 });
+                        CKEDITOR.replace('subject.Description', { height: 300 });
                         $body.find('#PictureId').sx_gvl();
                         $modal.modal('show');
                     }
