--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -88,15 +88,17 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-3">
                     <div class="second">
                         Любое использование или копирование материалов сайта - только с разрешения правообладателя и только с указанием ссылки на сайт
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-3">
                     <div class="third">
                         @if (!Request.IsLocal)
                         {
+                        <!-- Yandex.Metrika informer --> <a href="https://metrika.yandex.ru/stat/?id=36243880&amp;from=informer" target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/36243880/3_1_FFFFFFFF_EFEFEFFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" onclick="try{Ya.Metrika.informer({i:this,id:36243880,lang:'ru'});return false}catch(e){}" /></a> <!-- /Yandex.Metrika informer -->
+
                         <!--LiveInternet counter-->
                             <script type="text/javascript">
 <!--
@@ -110,6 +112,7 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 " часа, посетителей за 24 часа и за сегодня' "+
 "border='0' width='88' height='31'><\/a>")
 //--></script><!--/LiveInternet-->
+
                         }
                     </div>
                 </div>
