--- a/GE.WebUI/less/error-page.less
+++ b/GE.WebUI/less/error-page.less
@@ -14,16 +14,12 @@ html, body {
     position: relative;
 }
 
-.error-page.server{
-    color:@color-white;
-}
-
 body {
     padding: 0;
     margin: 0;
     font-family: Tahoma,sans-serif;
     text-align: center;
-    background: #C8C8C8 url(/content/dist/i/temp/48ce50da-eac8-11e5-9308-94708ff8d766.jpg) no-repeat;
+    background: #C8C8C8 url(/content/dist/i/404.jpg) no-repeat;
     background-size:100% 100%;
     @media (max-width: @screen-xs-max) {
         padding:15px;
