--- a/GE.WebUI/less/footer.less
+++ b/GE.WebUI/less/footer.less
@@ -89,6 +89,7 @@ footer .bottom div[class^="col-"] {
 
 footer .bottom .last {
     text-align: right;
+    font-size:12px;
 
     @media (max-width: @screen-xs-max) {
         text-align: left;
@@ -220,6 +221,7 @@ footer .third{
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        text-align:left;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
