--- a/GE.WebAdmin/Views/AffiliateLinks/Edit.cshtml
+++ b/GE.WebAdmin/Views/AffiliateLinks/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SxVMEditAffiliateLink
 @{
     var isNew = Model.Id == Guid.Empty;
-    ViewBag.Title = isNew ? "Добавить партнерскую ссылку" : "Редактировать партнерскую ссылку \"" + Model.RawUrl + "\"";
+    ViewBag.Title = isNew ? "Добавить партнерскую ссылку" : "Редактировать партнерскую ссылку \"" + Model.Id + "\"";
 }
 
 <h2>@ViewBag.Title</h2>
@@ -22,21 +22,10 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
 
-    <div class="row">
-        <div class="col-md-9">
-            <div class="form-group">
-                @Html.LabelFor(x => x.RawUrl, new { @class = "control-label" })
-                @Html.EditorFor(x => x.RawUrl, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(x => x.RawUrl)
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                @Html.LabelFor(x => x.ClickCost, new { @class = "control-label" })
-                @Html.EditorFor(x => x.ClickCost, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(x => x.ClickCost)
-            </div>
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(x => x.ClickCost, new { @class = "control-label" })
+        @Html.EditorFor(x => x.ClickCost, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(x => x.ClickCost)
     </div>
 
     <div class="form-group">
