--- a/GE.WebAdmin/Views/AffiliateLinks/Index.cshtml
+++ b/GE.WebAdmin/Views/AffiliateLinks/Index.cshtml
@@ -4,7 +4,13 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<br />
+
+<div class="alert alert-warning">
+    <b>Внимание!</b> В партнерской программе учавствуют все ссылки сайта. Полный вид партнерской ссылки имеет вид: {url}/?ak={x}, где url - это абсолютный адрес страницы, а x - идентификатор партнёрской ссылки.<br />
+    При переходе по партнерской ссылке идентификатор ссылки записывается в cookie браузера перешедшего пользователя и сохраняется там все время. При переходах пользователя по нескольким партнеркам все уникальные идентификаторы так же сохраняются в cookie.<br />
+    Подсчет кликов с партнерской ссылки производится один раз при Sпереходе. При дальнейшей навигации по сайту учитываются только клики по баннерам, в результате чего изменяется счетчик кликов по баннерам в рамках всех партнерок, в которых учавствует пользователь.
+</div>
+
 <div id="grid">
     @Html.Partial("_GridView", Model)
 </div>
