--- a/GE.WebAdmin/Views/AffiliateLinks/_GridView.cshtml
+++ b/GE.WebAdmin/Views/AffiliateLinks/_GridView.cshtml
@@ -4,8 +4,7 @@
         new SxExtantions.SxGridViewSettings<SxVMAffiliateLink>
         {
             Columns = new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>[]{
-                new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="Id", Caption="Идентификатор", Template=x=> { return "<b class=\"text-primary\">"+x.Id+"</b>"; } },
-                new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="RawUrl", Caption="Внутренняя ссылка"},
+                new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="Id", Caption="Идентификатор", Template=x=> { return "<b class=\"text-info\">"+x.Id+"</b>"; } },
                 new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="ClickCost", Caption="Стоимость клика, руб."},
                 new SxExtantions.SxGridViewColumn<SxVMAffiliateLink>{FieldName="ViewsCount", Caption="Кол-во переходов"}
             },
