--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
             });
         });*@
 
-        $('.th-banner').hover(function () {
+        $('.th-banner').mouseenter(function () {
             $banner = $(this);
             var bannerId = $banner.attr('data-id');
             var show = $banner.attr('data-show');
