--- a/GE.WebAdmin/Views/Manuals/Edit.cshtml
+++ b/GE.WebAdmin/Views/Manuals/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model VMEditManual
+﻿@model SxVMEditManual
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить справочный материал" : "Редактировать справочный материал \"" + Model.Title + "\"";
