--- a/GE.WebAdmin/Views/UserRoles/Edit.cshtml
+++ b/GE.WebAdmin/Views/UserRoles/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>@ViewBag.Title</h2>
-@if (!isNew)
+@if (!isNew && User.IsInRole("architect"))
 {
     <div class="form-group">
         <form method="post" action="/userroles/delete">
