--- a/GE.WebAdmin/Views/Manuals/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Manuals/_GridView.cshtml
@@ -1,19 +1,19 @@
-﻿@model VMManual[]
+﻿@model SxVMManual[]
 @{
     Layout = null;
 }
 
 
 @Html.SxGridView(Model,
-    new SxExtantions.SxGridViewSettings<VMManual>
+    new SxExtantions.SxGridViewSettings<SxVMManual>
     {
-        Columns = new SxExtantions.SxGridViewColumn<VMManual>[]{
-            new SxExtantions.SxGridViewColumn<VMManual>{FieldName="Title", Caption="Заголовок"},
-            new SxExtantions.SxGridViewColumn<VMManual>{FieldName="CategoryId", Caption="Инфо", Template=(m)=> {
+        Columns = new SxExtantions.SxGridViewColumn<SxVMManual>[]{
+            new SxExtantions.SxGridViewColumn<SxVMManual>{FieldName="Title", Caption="Заголовок"},
+            new SxExtantions.SxGridViewColumn<SxVMManual>{FieldName="CategoryId", Caption="Инфо", Template=(m)=> {
                 return string.IsNullOrEmpty(m.CategoryId) ?string.Format("<span class=\"text-danger\">{0}</span>", "Не определена категория"):null;
             } }
         },
-        DataAjaxUrl = "/manuals",
+        DataAjaxUrl = Url.Action("Index", "Manuals"),
         EnableCreating=true,
         CreateRowUrl= "/manuals/edit",
         EnableEditing=true,
