--- a/GE.WebAdmin/Views/BannerGroups/Edit.cshtml
+++ b/GE.WebAdmin/Views/BannerGroups/Edit.cshtml
@@ -61,7 +61,7 @@
             </div>
             <br />
             <div id="grid-banners">
-                @Html.Action("GroupBanners", new { controller = "banners", bgid = Model.Id })
+                @Html.Action("GroupBanners", "Banners", new { bgid = Model.Id })
             </div>
         </div>
     </div>
