--- a/GE.WebAdmin/less/site.less
+++ b/GE.WebAdmin/less/site.less
@@ -29,3 +29,7 @@ body{
     text-align:center;
     vertical-align:middle;
 }
+
+#modal-error body{
+    font-family: 'Roboto Condensed', sans-serif;
+}
