--- a/GE.WebUI/Views/Humor/Details.cshtml
+++ b/GE.WebUI/Views/Humor/Details.cshtml
@@ -38,8 +38,8 @@
 {
     LikeDownCount = () => Model.LikeDownCount,
     LikeUpCount = () => Model.LikeUpCount,
-    MaterialId = () => Model.Id,
-    ModelCoreType = Model.ModelCoreType
+    UrlUp = () => Url.Action("AddLike", "Humor", new { mid = Model.Id, ld = "true" }),
+    UrlDown = () => Url.Action("AddLike", "Humor", new { mid = Model.Id, ld = "false" })
 })
     <br />
 </div>
